[package]
name = "advent"
version = "0.1.0"
edition = "2021"
default-run = "advent"

[profile.dev]
opt-level = 1

[[bin]]
name = "all"
path = "src/bin/all.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
float-cmp = "0.9.0"
itertools = "0.11.0"
lazy_static = "1.5.0"
ndarray = "0.15.6"
ndarray-linalg = {version = "0.16.0", features = ["openblas-static"]}
num = "0.4.1"
petgraph = "0.6.4"
priority-queue = "1.3.2"
regex = "1.10.2"
threadpool = "1.8.1"
